samples/_failures_safe/1761796940_28974d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5537e9f.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_d5537e9f.c:138:12: error: missing terminating " character
  138 |     printf("Entries with level
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d5537e9f.c:138:5: error: expected expression at end of input
  138 |     printf("Entries with level
      |     ^~~~~~
./samples/SAFE/__tmp_d5537e9f.c:138:5: error: expected declaration or statement at end of input
